Early version for multi-language support (Only data, not the UI labels; not fully tested).